Add or modify files

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="PRIME VISION TECHNOLOGIES" />
     <meta property="og:description" content="Transforming Challenges into Solutions." />
     <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" />
-    <meta property="og:url" content="https://www.mirokuconsultancyservices.com" />
+    <meta property="og:url" content="https://www.primevisiontechnologies.com" />
     
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="PRIME VISION TECHNOLOGIES" />
